[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["kisweb <kisarrweb@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
